@@ -17,4 +17,4 @@ Thanks to:
     Ilya Kotov whoes help to improve localization
     Alex Koudr whoes help with with mouse scanning on Windows
     Nicolas Vion whoes add the french translation
-
+    Andriy Rysin whoes add the command line support
